--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start:standalone": "hover-scripts test",
     "test": "run-s build:testing-library test:*",
     "test:legacy": "run-s build:testing-library test:standalone test:fixture:legacy",
-    "test:fixture": "playwright test",
+    "test:fixture": "playwright test --workers=1",
     "test:fixture:legacy": "playwright test test/fixture/element-handles.test.ts",
     "test:standalone": "hover-scripts test --no-watch",
     "test:types": "tsc --noEmit"
